# leele

./: .gitignore  README.md
apps/leele-agentcore/: .gitignore  Taskfile.yml  pyproject.toml
apps/leele-agentcore/app/: main.py  mcpclient.py  model.py
apps/leele-audiohandle/: Cargo.toml  Cross.toml  Taskfile.yml
apps/leele-audiohandle-lambda/: .gitignore  Taskfile.yml
apps/leele-audiohandle-lambda/app/: audioinput.py  audiooutput.py  main.py
apps/leele-audiohandle/proto/google/cloud/speech/v1/: cloud_speech.proto
apps/leele-audiohandle/src/: audioinput.rs  audioinputs.rs  audiooutput.rs  handle.rs  main.rs
apps/leele-m5client/src/: audioin.cpp  audioin.hpp  audioout.cpp  audioout.hpp  main.cpp
apps/leele-ui/: .cta.json  .env.example  .gitignore  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
apps/leele-ui/src/: gql.d.ts  gqlschema.graphql  routeTree.gen.ts  router.tsx
apps/leele-ui/src/auth/: Provider.tsx  useAuth.tsx
apps/leele-ui/src/components/: AuthProvider.tsx  Header.tsx  NotFound.tsx  UrqlProvider.tsx
apps/leele-ui/src/components/chats/: ChatChannelSelector.tsx  ChatCreate.tsx  Chats.tsx  ChatsSubscribe.tsx
apps/leele-ui/src/components/common/: Header.tsx  NotFound.tsx
apps/leele-ui/src/components/profile/: Profile.tsx
apps/leele-ui/src/gql/: Provider.tsx  appsync.ts  gql.d.ts  schema.graphql
apps/leele-ui/src/lib/: appsync-realtime.ts
apps/leele-ui/src/routes/: __root.tsx  index.tsx
apps/leele-ui/src/routes/channels/: $channel.tsx
apps/leele-ui/src/routes/channels/$channel/: index.tsx
apps/leele-ui/src/routes/chats/: index.tsx
apps/leele-ui/src/routes/chatsold/: index.tsx
apps/leele-ui/src/routes/login/: index.tsx
apps/leele-ui/src/routes/profile/: index.tsx
