[package]
name = "leele-audiohandle"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
base64 = "0.22"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"]  }
anyhow = "1"
lambda_runtime = "1.0.1"
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-transcribe = "1"
aws-sdk-iotdataplane = "1"
aws-sdk-bedrockagentcore = "1"
aws-sdk-polly = "1.106.0"
aws-smithy-http = "0.63.6"
tokio-stream = "0.1.18"
